# autodarktheme

./: .project  .pydevproject  pyproject.toml
src/autodarktheme/: main.py
